2015-10-20  Kubo Takehiro  <kubo@jiubao.org>
	* ext/oci8/bind.c, lib/oci8/bindtype.rb, test/test_all.rb,
	  test/test_bind_boolean.rb: Support boolean type binding.

2015-10-19  Kubo Takehiro  <kubo@jiubao.org>
	* ext/oci8/apiwrap.yml: Delete unused OCI function definitions.

2015-10-19  Kubo Takehiro  <kubo@jiubao.org>
	* ext/oci8/extconf.rb: Use macros OCI_MAJOR_VERSION and OCI_MINOR_VERSION
	    in oci.h to check the target Oracle client version.

2015-10-12  Kubo Takehiro  <kubo@jiubao.org>
	* NEWS: Add changes between 2.2.0.1 and 2.2.0.2.

2015-10-12  Kubo Takehiro  <kubo@jiubao.org>
	* lib/oci8/version.rb: Update the version to 2.2.0.2 to
	    release binary gems for mingw32.

2015-10-11  Kubo Takehiro  <kubo@jiubao.org>
	* NEWS: Add changes between 2.2.0 and 2.2.0.1.
	* docs/install-on-osx.md: Fix indent width.
	* lib/oci8/version.rb: update to 2.2.0.1.

2015-10-11  Kubo Takehiro  <kubo@jiubao.org>
	* docs/osx-install-dev-tools.png: added.
	* docs/install-on-osx.md: fix "Install C compiler."
	* README.md: Use documents in rubydoc.info as homepage.

2015-10-10  Kubo Takehiro  <kubo@jiubao.org>
	* ruby-oci8.gemspec: Change the required_ruby_version from '>= 1.8.0'
	    to '>= 1.9.1'.
	    (github issue #96)

2015-10-06  Kubo Takehiro  <kubo@jiubao.org>
	* README.md: Add notice that ruby 1.8 is not supported.
	* README.md, ext/oci8/oraconf.rb: Change links to ruby-oci8 documents.
	    They had referred docs generated from the latest gem. They were
	    updated only when a new version was released. Now they refers
	    to docs generated from the latest github repository. They are
	    updated for each commits.

2015-10-05  Kubo Takehiro  <kubo@jiubao.org>
	* docs/install-on-osx.md: Merge GH-97: Fix small typo in NEWS file.

2015-10-04  Kubo Takehiro  <kubo@jiubao.org>
	* NEWS: Add changes between 2.1.8 and 2.2.0.

2015-10-04  Kubo Takehiro  <kubo@jiubao.org>
	* ext/oci8/oci8lib.c: Fix compilation errors when --with-runtime-check
	    is passed to extconf.rb.
