@@ -1,3 +1,7 @@
+2015-10-26  Kubo Takehiro  <kubo@jiubao.org>
+	* ext/oci8/ocinumber.c: Drop code for ruby 1.8.
+	    Rational has been a built-in type since ruby 1.9.
+
 2015-10-20  Kubo Takehiro  <kubo@jiubao.org>
 	* ext/oci8/bind.c, lib/oci8/bindtype.rb, test/test_all.rb,
 	  test/test_bind_boolean.rb: Support boolean type binding.
